feat: get self daily emotion
